# mediaforge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLAUDE.md  FEATURES.md  INFRASTRUKTURA.md  LEGAL_BOUNDARIES.md  PROMPTS.md  ROADMAP.md
src/mediaforge/: __init__.py
src/mediaforge/cli/: __init__.py  main.py
src/mediaforge/core/: __init__.py  compute.py  config.py  dependencies.py  logging_setup.py  secrets.py  tools.py  winutil.py
src/mediaforge/core/ai/: __init__.py  chunking.py  gateway.py  pairing.py  providers.py  routing.py  summarize.py  transcribe.py  vision.py
src/mediaforge/core/detection/: __init__.py  hardware.py  report.py  tools.py
src/mediaforge/core/engines/: __init__.py  base.py  download_engine.py  dshow_devices.py  ffmpeg_cmd.py  import_engine.py  podcast.py  recorder.py  segments.py
src/mediaforge/core/jobs/: __init__.py  handlers.py  queue.py  store.py
src/mediaforge/gui/: __init__.py  about.py  app.py  download_dialog.py  help_window.py  import_dialog.py  library_widget.py  main_window.py  material_details.py  podcast_dialog.py  profiles_dialog.py  record_dialog.py  settings_dialog.py
tests/: conftest.py  test_chunking.py  test_cli.py  test_config_roundtrip.py  test_core_no_qt.py  test_dependencies.py  test_detection.py  test_download.py  test_download_dialogs.py  test_dshow_devices.py  test_gui_window.py  test_help.py  test_import_engine.py  test_job_handlers.py  test_jobs.py  test_library.py  test_library_widget.py  test_logging.py  test_material.py  test_material_details.py  test_no_window_flags.py  test_notes_handler.py  test_pairing.py  test_podcast.py  test_profiles.py  test_record_dialog.py  test_recorder_cmd.py  test_recorder_recovery.py  test_recorder_session.py  test_recordings_store.py  test_schema_migration.py  test_settings_dialog.py  test_slides.py  test_smoke.py  test_summarize_client.py  test_summarize_routing.py  test_tools.py  test_transcribe.py  test_vision.py
