[project]
name = "mediaforge"
version = "0.1.0"
description = "Desktopowy archiwizator materiałów edukacyjnych z transkrypcją i streszczeniami AI (Windows)."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Marcin", email = "" }]
keywords = ["transcription", "whisper", "archive", "education", "pyside6"]

dependencies = [
    "PySide6>=6.7",          # GUI (LGPL — zgodne z MIT)
    # Wspólny standard GUI — paleta, ThemeManager, titlebar DWM, dialogi, widgety.
    # Pin do SHA (tag w komentarzu; tag jest mutowalny). Podniesienie wersji = osobny commit chore: + testy.
    # platformdirs wchodzi tranzytywnie z kitu (jego config.py go używa).
    "chodzkos-gui-kit[qt] @ git+https://github.com/chodzkos/gui-kit@09938082b2b5d2250fb1adfb2fd238a8199366ec",  # v0.5.0
    "keyring>=25",           # sekrety w systemowym magazynie poświadczeń
    "yt-dlp>=2026.7.4",        # pobieranie (etap późny); luźny pin — patrz CLAUDE.md
    "typer>=0.12",           # CLI
    "httpx>=0.27",           # klient HTTP (LiteLLM gateway, Telegram)
    "pydantic>=2.7",         # modele danych / walidacja konfiguracji
]

[project.optional-dependencies]
# Tor transkrypcji "mocy" (HF/PyTorch). UWAGA: na Blackwell/sm_120 wymaga
# nightly PyTorcha i pinów transformers — patrz docs/CLAUDE.md. Domyślny tor
# (whisper.cpp) jest poza PyPI i nie wymaga tych zależności.
transcribe-hf = [
    "insanely-fast-whisper",
    "pyannote.audio",
]
# faster-whisper jako alternatywa (działa na sm_120 wyłącznie z compute_type=float16)
transcribe-ct2 = [
    "faster-whisper>=1.0",
]
search = [
    "sqlite-utils>=4.0",    # wygodna obsługa FTS5
    # baza wektorowa do semantic search dobrana na etapie S7 (LanceDB/Chroma/Qdrant)
]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-qt>=4.4",
    "pytest-cov>=5",
]

[project.scripts]
mediaforge-cli = "mediaforge.cli.main:app"

[project.gui-scripts]
mediaforge = "mediaforge.gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Zależność chodzkos-gui-kit jest podana jako URL gita (PEP 508 "direct reference").
# Hatchling domyślnie odrzuca takie wpisy w project.dependencies — ten przełącznik
# je dopuszcza. Bez tego `uv sync` wywala się na build_editable.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mediaforge"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]
# Część zależności jest nietypowana (yt-dlp, keyring, faster-whisper, pyannote).
# Jak w gui-kit: nie blokuj na brakujących stubach. gui-kit ma py.typed (typowany).
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=mediaforge --cov-report=term-missing"
